Automata/New/Week 4/3.2.7B/.antlr/MyGrammarParser.java
// Generated from d:/AP/Academic-prep/Automata/New/Week 4/3.2.7/MyGrammar.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MyGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, INTERSECTION=3, LPAR=4, RPAR=5, WS=6;
	public static final int
		RULE_myStart = 0, RULE_dfa = 1, RULE_firstDfa = 2, RULE_secondDfa = 3;
	private static String[] makeRuleNames() {
		return new String[] {
			"myStart", "dfa", "firstDfa", "secondDfa"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ab*a*'", "'(b)*ab'", "'\\u2229'", "'L('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "INTERSECTION", "LPAR", "RPAR", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MyStartContext extends ParserRuleContext {
		public DfaContext dfa() {
			return getRuleContext(DfaContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MyGrammarParser.EOF, 0); }
		public MyStartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_myStart; }
	}

	public final MyStartContext myStart() throws RecognitionException {
		MyStartContext _localctx = new MyStartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_myStart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(8);
			dfa();
			setState(9);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DfaContext extends ParserRuleContext {
		public FirstDfaContext firstDfa() {
			return getRuleContext(FirstDfaContext.class,0);
		}
		public TerminalNode INTERSECTION() { return getToken(MyGrammarParser.INTERSECTION, 0); }
		public SecondDfaContext secondDfa() {
			return getRuleContext(SecondDfaContext.class,0);
		}
		public DfaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dfa; }
	}

	public final DfaContext dfa() throws RecognitionException {
		DfaContext _localctx = new DfaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dfa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(11);
			firstDfa();
			setState(12);
			match(INTERSECTION);
			setState(13);
			secondDfa();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FirstDfaContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(MyGrammarParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(MyGrammarParser.RPAR, 0); }
		public FirstDfaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_firstDfa; }
	}

	public final FirstDfaContext firstDfa() throws RecognitionException {
		FirstDfaContext _localctx = new FirstDfaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_firstDfa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(15);
			match(LPAR);
			setState(16);
			match(T__0);
			setState(17);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SecondDfaContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(MyGrammarParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(MyGrammarParser.RPAR, 0); }
		public SecondDfaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_secondDfa; }
	}

	public final SecondDfaContext secondDfa() throws RecognitionException {
		SecondDfaContext _localctx = new SecondDfaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_secondDfa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(19);
			match(LPAR);
			setState(20);
			match(T__1);
			setState(21);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}